Pull request #6: UCPACT-285 fix homepage model list
UCPACT-285 #done #comment fix homepage model list

Squashed commit of the following:

commit 1b2ccfd8b863c0db94f50380e10ba00a5d12fdb7
Author: nbain <nbain@riversideresearch.org>
Date:   Mon Jun 10 11:16:39 2024 -0600

    Added all models button and centerd modal

commit b99166e7bcfd0c9f2b561468862c10e434e7fc25
Merge: 9a57868 59794e0
Author: nbain <nbain@riversideresearch.org>
Date:   Fri Jun 7 10:25:18 2024 -0600

    Merge conflicts, especially integrating 281

commit 9a57868dc006214d1e15bef47b70a396e78cddff
Author: nbain <nbain@riversideresearch.org>
Date:   Thu Jun 6 16:53:37 2024 -0600

    Removed /list from routes

commit f0ea0f8644335c9860097a8c75f91fa38028fe68
Author: nbain <nbain@riversideresearch.org>
Date:   Tue Jun 4 15:02:21 2024 -0600

    Homepage now only shows writable models

commit 867dc530bbc92f859dd900eebe3a7cf085f4c5b7
Author: nbain <nbain@riversideresearch.org>
Date:   Tue Jun 4 13:08:43 2024 -0600

    Put all models into modal on homepage

commit 226191fce274922f66478e3288dc30795a7ffc72
Author: nbain <nbain@riversideresearch.org>
Date:   Wed May 29 09:30:06 2024 -0600

    First work on model list component

--- a/frontend/src/components/landingPage.css
+++ b/frontend/src/components/landingPage.css
@@ -44,3 +44,17 @@
 .new-model-name {
   margin-bottom: 0.25em;
 }
+
+/* .modelListModal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+} */
+
+.modelListModal > div > div {
+  width: fit-content;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
